FIX: 修复toList方式使用问题